# CourseManageSystem

./: .gitignore  CMakeLists.txt  README.md
includes/: CList.h  Choose.h  Common.h  Menu.h  PepoleandCouse.h  PutDataIn.h  SList.h  WrAddRe.h
src/: CList.c  Choose.c  Main.c  Menu.c  PutDataIn.c  SList.c  WrAddRe.c
